colour contrast fix

--- a/output.css
+++ b/output.css
@@ -14970,6 +14970,10 @@ video {
 
 a {
   cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 body {
